// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /api/features/v1 does not return features that arent allowed by current license 1`] = `
Array [
  Object {
    "app": Array [],
    "id": "feature_1",
    "name": "Feature 1",
    "privileges": Object {},
  },
]
`;

exports[`GET /api/features/v1 returns a list of available features 1`] = `
Array [
  Object {
    "app": Array [],
    "id": "feature_1",
    "name": "Feature 1",
    "privileges": Object {},
  },
  Object {
    "app": Array [
      "bar-app",
    ],
    "id": "licensed_feature",
    "name": "Licensed Feature",
    "privileges": Object {},
    "validLicenses": Array [
      "gold",
    ],
  },
]
`;
